[package]
name = "gitlab-issues-from-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1.11", features = ["derive"]}
csv = "1.2.1"
json = "0.12.4"
uuid = { version = "^1.3.0", features = ["fast-rng", "v4"] }
reqwest = { version = "^0.11.6", features = ["blocking", "json"] }
serde_json = {version = "^1.0.94" }
